[gd_scene load_steps=31 format=3 uid="uid://butfrm6kcwkfv"]

[ext_resource type="Script" uid="uid://dch864dvvnkgw" path="res://enemy/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://cuk6w7l06s887" path="res://assets/Enemies/snake.png" id="2_pmsee"]
[ext_resource type="Texture2D" uid="uid://cha0fahwpfrxp" path="res://assets/Enemies/exclamation.png" id="3_1wwld"]
[ext_resource type="Texture2D" uid="uid://b3fv3jjib58rg" path="res://assets/Enemies/snake-green-sheet.png" id="3_5ffra"]
[ext_resource type="Script" uid="uid://5wxh4mmjok38" path="res://enemy/body_container.gd" id="3_qi2p4"]
[ext_resource type="PackedScene" uid="uid://dc4dediq6oetg" path="res://enemy/body_segment.tscn" id="4_epg4t"]
[ext_resource type="Script" uid="uid://b72rpg7r4k441" path="res://enemy/vision_cone.gd" id="4_iifgy"]
[ext_resource type="Texture2D" uid="uid://b3tnw71t4agov" path="res://assets/Enemies/texture-cone.png" id="7_y5vj3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1wwld"]
atlas = ExtResource("2_pmsee")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5vj3"]
atlas = ExtResource("2_pmsee")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ffra"]
atlas = ExtResource("2_pmsee")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kek77"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wwld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5vj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ffra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5vj3")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tbw0t"]
atlas = ExtResource("3_5ffra")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjonb"]
atlas = ExtResource("3_5ffra")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rovcg"]
atlas = ExtResource("3_5ffra")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2hyd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbw0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjonb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rovcg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e355f"]
atlas = ExtResource("3_1wwld")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78jik"]
atlas = ExtResource("3_1wwld")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3pv7"]
atlas = ExtResource("3_1wwld")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoplw"]
atlas = ExtResource("3_1wwld")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yflr"]
atlas = ExtResource("3_1wwld")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf88j"]
atlas = ExtResource("3_1wwld")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tbw0t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e355f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78jik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3pv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoplw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yflr")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_gf88j")
}],
"loop": false,
"name": &"alert",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 6.89656

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("2_pmsee")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("2_pmsee")
region = Rect2(16, 32, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_1wwld"]
radius = 8.0

[sub_resource type="Animation" id="Animation_34gv7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WinBody:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c6eq3"]
resource_name = "new_animation"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WinBody:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.26667, 3.56667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 3.43333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyContainer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_color"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pg32h"]
_data = {
&"RESET": SubResource("Animation_34gv7"),
&"new_animation": SubResource("Animation_c6eq3")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
wall_min_slide_angle = 0.0
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_kek77")
autoplay = "default"
frame_progress = 0.743917

[node name="WinBody" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 3
sprite_frames = SubResource("SpriteFrames_n2hyd")

[node name="AnimationAlert" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -27)
sprite_frames = SubResource("SpriteFrames_tbw0t")
animation = &"alert"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
simplify_epsilon = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4gyqm")

[node name="RandomDir" type="Timer" parent="."]
autostart = true

[node name="BodyContainer" type="Node2D" parent="."]
script = ExtResource("3_qi2p4")
segment_scene = ExtResource("4_epg4t")
body_texture = SubResource("AtlasTexture_iifgy")
tail_texture = SubResource("AtlasTexture_epg4t")

[node name="VisionCone" type="Node2D" parent="."]
rotation = 1.57079
script = ExtResource("4_iifgy")
rotation_offset = 1.5

[node name="Polygon2D" type="Polygon2D" parent="VisionCone"]
scale = Vector2(0.8, 0.8)
color = Color(0.880472, 0.880472, 0, 0.329412)
texture = ExtResource("7_y5vj3")
texture_offset = Vector2(363, 246)
texture_rotation = 1.44513
polygon = PackedVector2Array(0, 0, 173.2, -100, 173.2, 100)

[node name="RayCast2D" type="RayCast2D" parent="VisionCone/Polygon2D"]
scale = Vector2(1.25, 1.25)
target_position = Vector2(136, 0)
collision_mask = 255

[node name="VisionArea" type="Area2D" parent="VisionCone"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionCone/VisionArea"]
scale = Vector2(0.8, 0.8)
polygon = PackedVector2Array(0, 0, 173.2, -100, 173.2, 100)

[node name="Killzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_1wwld")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pg32h")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RandomDir" to="." method="_on_random_dir_timeout"]
[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
